@@ -1,50 +1,85 @@
 package io.basc.framework.util.register.container;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
-import java.util.List;
+import java.util.function.BiConsumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-import io.basc.framework.util.Assert;
+import io.basc.framework.util.ObjectUtils;
 import io.basc.framework.util.element.Elements;
-import io.basc.framework.util.register.BatchRegistration;
-import io.basc.framework.util.register.PayloadRegistration;
+import io.basc.framework.util.event.EventPublishService;
+import io.basc.framework.util.observe.ChangeEvent;
+import io.basc.framework.util.observe.ChangeType;
+import io.basc.framework.util.register.BrowseableRegistry;
+import io.basc.framework.util.register.Registration;
+import io.basc.framework.util.register.RegistrationException;
+import io.basc.framework.util.register.Registrations;
+import io.basc.framework.util.register.empty.EmptyRegistrations;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
 
-public class ElementRegistry<E, C extends Collection<ElementRegistration<E>>> extends
-		AbstractServiceRegistry<E, C, ElementRegistration<E>, ElementBatchRegistration<E>> implements Collection<E> {
+public class ElementRegistry<E, C extends Collection<ElementRegistration<E>>> extends LazyContainer<C>
+		implements BrowseableRegistry<E, ElementRegistration<E>>, Collection<E> {
+	@RequiredArgsConstructor
+	private class BatchRegistrations implements Registrations<ElementRegistration<E>> {
+		private final Elements<UpdateableElementRegistration> registrations;
 
-	public ElementRegistry(Supplier<? extends C> containerSupplier) {
+		@Override
+		public void deregister() throws RegistrationException {
+			Elements<UpdateableElementRegistration> elements = this.registrations.filter((e) -> !e.isInvalid());
+			// 全部设置为无效，防止调用默认的事件
+			elements.forEach((e) -> e.getLimiter().limited());
+			batchDeregister(elements);
+		}
+
+		@Override
+		public Elements<ElementRegistration<E>> getRegistrations() {
+			return registrations.map((e) -> e);
+		}
+	}
+
+	private class UpdateableElementRegistration extends CombinableElementRegistration<E, ElementRegistration<E>> {
+		private UpdateableElementRegistration(
+				CombinableElementRegistration<E, ElementRegistration<E>> combinableServiceRegistration) {
+			super(combinableServiceRegistration);
+		}
+
+		public UpdateableElementRegistration(ElementRegistration<E> source) {
+			super(source, Registration.EMPTY);
+		}
+
+		@Override
+		public UpdateableElementRegistration and(@NonNull Registration registration) {
+			return new UpdateableElementRegistration(super.and(registration));
+		}
+
+		@Override
+		public void deregister(Runnable runnable) throws RegistrationException {
+			super.deregister(() -> {
+				try {
+					runnable.run();
+				} finally {
+					cleanup();
+					eventPublishService.publishEvent(new ChangeEvent<E>(getPayload(), ChangeType.DELETE));
+				}
+			});
+		}
+
+		@Override
+		public E setValue(E value) {
+			E oldValue = super.setValue(value);
+			eventPublishService.publishEvent(new ChangeEvent<>(value, oldValue));
+			return oldValue;
+		}
+	}
+
+	private final EventPublishService<ChangeEvent<E>> eventPublishService;
+
+	public ElementRegistry(@NonNull Supplier<? extends C> containerSupplier,
+			@NonNull EventPublishService<ChangeEvent<E>> eventPublishService) {
 		super(containerSupplier);
-	}
-
-	@Override
-	public final boolean add(E e) {
-		return addAll(Arrays.asList(e));
-	}
-
-	@Override
-	public final boolean addAll(Collection<? extends E> elements) {
-		Assert.requiredArgument(elements != null, "elements");
-		BatchRegistration<ElementRegistration<E>> batchRegistration = registers(Elements.of(elements));
-		return !batchRegistration.isInvalid();
-	}
-
-	@Override
-	protected ElementRegistration<E> createRegistration(E item) {
-		return new ElementRegistration<>(item);
-	}
-
-	@Override
-	protected ElementBatchRegistration<E> createRegistrations(Elements<ElementRegistration<E>> registrations) {
-		return new ElementBatchRegistration<>(registrations);
-	}
-
-	@Override
-	protected ElementBatchRegistration<E> postRegisterAfter(ElementBatchRegistration<E> registrations) {
-		return registrations.batch((es) -> () -> cleanup());
+		this.eventPublishService = eventPublishService;
 	}
 
 	/**
@@ -54,7 +89,7 @@ public class ElementRegistry<E, C extends Collection<ElementRegistration<E>>> ex
 		execute((members) -> {
 			Iterator<ElementRegistration<E>> iterator = members.iterator();
 			while (iterator.hasNext()) {
-				PayloadRegistration<E> registration = iterator.next();
+				ElementRegistration<E> registration = iterator.next();
 				if (registration.isInvalid()) {
 					iterator.remove();
 				}
@@ -64,113 +99,182 @@ public class ElementRegistry<E, C extends Collection<ElementRegistration<E>>> ex
 	}
 
 	@Override
+	public final boolean add(E e) {
+		Registration registration = register(e);
+		return !registration.isInvalid();
+	}
+
+	@Override
+	public final boolean addAll(Collection<? extends E> c) {
+		Registrations<ElementRegistration<E>> registrations = registers(c);
+		return !registrations.getRegistrations().isEmpty();
+	}
+
+	private boolean batchDeregister(Elements<? extends ElementRegistration<E>> registrations) {
+		if (registrations.isEmpty()) {
+			return false;
+		}
+
+		registrations.forEach(Registration::deregister);
+		cleanup();
+		Elements<ChangeEvent<E>> events = registrations
+				.map((e) -> new ChangeEvent<>(e.getPayload(), ChangeType.DELETE));
+		eventPublishService.publishBatchEvents(events);
+		return true;
+	}
+
+	@Override
 	public final void clear() {
 		deregister();
 	}
 
-	public final boolean contains(Object element) {
-		return test((collection) -> collection.contains(element));
+	@Override
+	public final boolean contains(Object o) {
+		return test((collection) -> collection.contains(o));
 	}
 
 	@Override
 	public final boolean containsAll(Collection<?> c) {
-		return test((members) -> {
-			if (members == null) {
-				return false;
-			}
-
-			// registrations已经被重写，此处可以使用contains，也提高了使用Set时的性能
-			return c.stream().allMatch((e) -> members.contains(e));
-		});
+		return test((collection) -> collection == null ? false : collection.containsAll(c));
 	}
 
 	@Override
-	public Elements<ElementRegistration<E>> getRegistrations() {
-		return read((collection) -> {
+	public final void deregister() throws RegistrationException {
+		Elements<ElementRegistration<E>> registrations = read((collection) -> {
 			if (collection == null) {
 				return Elements.empty();
 			}
 
-			return Elements.of(collection.stream().filter((e) -> !e.isInvalid()).collect(Collectors.toList()));
+			return Elements.of(collection).toList();
 		});
+		batchDeregister(registrations);
+	}
+
+	@Override
+	public final void deregister(E element) {
+		remove(element);
+	}
+
+	public final ElementRegistration<E> getRegistration(Function<? super C, ? extends ElementRegistration<E>> reader) {
+		ElementRegistration<E> elementRegistration = read((collection) -> reader.apply(collection));
+		if (elementRegistration == null) {
+			return null;
+		}
+		return new UpdateableElementRegistration(elementRegistration);
+	}
+
+	@Override
+	public final Elements<ElementRegistration<E>> getRegistrations() {
+		return getRegistrations(
+				(collection) -> collection == null ? Elements.empty() : Elements.of(collection).toList())
+				.getRegistrations();
+	}
+
+	public final Registrations<ElementRegistration<E>> getRegistrations(
+			Function<? super C, ? extends Elements<ElementRegistration<E>>> reader) {
+		Elements<ElementRegistration<E>> registrations = read((collection) -> reader.apply(collection));
+		if (registrations == null || registrations.isEmpty()) {
+			return EmptyRegistrations.empty();
+		}
+
+		Elements<UpdateableElementRegistration> updateableRegistrations = registrations
+				.map((e) -> new UpdateableElementRegistration(e));
+		return new BatchRegistrations(updateableRegistrations);
 	}
 
 	@Override
 	public final boolean isEmpty() {
-		return test((members) -> members == null || members.isEmpty());
+		return test((collection) -> collection == null ? true : collection.isEmpty());
 	}
 
 	@Override
 	public final Iterator<E> iterator() {
-		return readAll().iterator();
+		return getServices().iterator();
 	}
 
-	/**
-	 * 复制为一个list保证线程安全
-	 * 
-	 * @return
-	 */
-	public final List<E> readAll() {
-		return read((collection) -> {
-			if (collection == null) {
-				return Collections.emptyList();
+	protected ElementRegistration<E> newElementRegistration(E element) {
+		return new AtomicElementRegistration<>(element);
+	}
+
+	@Override
+	public final Registrations<ElementRegistration<E>> registers(Iterable<? extends E> elements)
+			throws RegistrationException {
+		Elements<ElementRegistration<E>> es = Elements.of(elements).map(this::newElementRegistration);
+		return writeRegistrations((collection) -> {
+			for (ElementRegistration<E> registration : es) {
+				if (!collection.add(registration)) {
+					registration.deregister();
+				}
 			}
-			return collection.stream().filter((e) -> !e.isInvalid()).map((e) -> e.getPayload())
-					.collect(Collectors.toList());
+			return es.toList();
+		});
+	}
+
+	public final Registrations<ElementRegistration<E>> registers(Iterable<? extends E> elements,
+			BiConsumer<? super C, ? super Elements<ElementRegistration<E>>> register) throws RegistrationException {
+		Elements<ElementRegistration<E>> es = Elements.of(elements).map(this::newElementRegistration);
+		return writeRegistrations((collection) -> {
+			register.accept(collection, es);
+			return es.toList();
 		});
 	}
 
 	@Override
-	protected boolean register(C container, ElementRegistration<E> registration) {
-		return container.add(registration);
+	public void reload() {
+		cleanup();
 	}
 
 	@Override
 	public final boolean remove(Object o) {
-		return removeAll(Arrays.asList(o));
+		Elements<ElementRegistration<E>> registrations = read((collection) -> {
+			if (collection == null) {
+				return Elements.empty();
+			}
+
+			return Elements.of(collection).filter((e) -> ObjectUtils.equals(e.getPayload(), o)).toList();
+		});
+
+		return batchDeregister(registrations);
 	}
 
 	@Override
 	public final boolean removeAll(Collection<?> c) {
-		return execute((members) -> {
-			boolean find = false;
-			Iterator<ElementRegistration<E>> iterator = members.iterator();
-			while (iterator.hasNext()) {
-				ElementRegistration<E> registration = iterator.next();
-				if (c.contains(registration.getPayload())) {
-					iterator.remove();
-					registration.deregister();
-					find = true;
-				}
+		Elements<ElementRegistration<E>> registrations = read((collection) -> {
+			if (collection == null) {
+				return Elements.empty();
 			}
-			return find;
+
+			return Elements.of(collection).filter((e) -> c.contains(e.getPayload())).toList();
 		});
+		return batchDeregister(registrations);
 	}
 
 	@Override
 	public final boolean retainAll(Collection<?> c) {
-		return test((members) -> {
-			if (members == null) {
-				return false;
-			}
-
-			// ElementRegistration 已经被重写，此处可以使用contains，也提高了使用Set时的性能
-			return c.stream().anyMatch((e) -> members.contains(e));
-		});
+		return test((collection) -> collection == null ? false : collection.retainAll(c));
 	}
 
 	@Override
 	public final int size() {
-		return readInt((elements) -> elements == null ? 0 : elements.size());
+		return readInt((collection) -> collection == null ? 0 : collection.size());
 	}
 
 	@Override
 	public final Object[] toArray() {
-		return readAll().toArray();
+		return getServices().toArray();
 	}
 
 	@Override
 	public final <T> T[] toArray(T[] a) {
-		return readAll().toArray(a);
+		return getServices().toArray(a);
+	}
+
+	private final Registrations<ElementRegistration<E>> writeRegistrations(
+			Function<? super C, ? extends Elements<ElementRegistration<E>>> writer) {
+		Elements<ElementRegistration<E>> registrations = write(writer).filter((e) -> !e.isInvalid()).toList();
+		Elements<ChangeEvent<E>> events = registrations
+				.map((e) -> new ChangeEvent<>(e.getPayload(), ChangeType.CREATE));
+		eventPublishService.publishBatchEvents(events);
+		return getRegistrations((collection) -> registrations);
 	}
 }
